...
        android:id="@+id/imageView2"
        android:layout_width="304dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo" />

    <!-- EditText del Usuario -->
    <EditText
...
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#A9A9A9"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintBottom_toTopOf="@id/btLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón de Iniciar Sesión -->
    <Button
        android:id="@+id/btLogin"
        android:layout_width="295dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#B90B0B"
        android:text="Iniciar Sesión"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintBottom_toTopOf="@id/preguntaCuenta"
...
        android:text="¿No tienes una cuenta?"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btJoin" />

    <!-- Botón de Registrarse -->
    <Button
        android:id="@+id/btJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#003E9B04"
        android:layout_marginBottom="150dp"
        android:text="Registrate"
        android:textAllCaps="false"
        android:textColor="#4CAF50"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/preguntaCuenta"
        app:layout_constraintStart_toStartOf="parent"
...
