...
        android:title="Clasificación"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/equipoFragment"
        android:enabled="true"
        android:icon="@drawable/campo_de_futbol"
        android:title="Equipo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mercadoFragment"
        android:enabled="true"
        android:icon="@drawable/maletin"
        android:title="Mercado"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actividadFragment"
        android:enabled="true"
        android:title="Actividad"
        android:icon="@drawable/campana"
...
